[project]
name = "dnd-mcp"
version = "0.1.0"
description = "A Dungeons & Dragons 5th Edition Knowledge Base using the MCP API"
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "httpx>=0.28.1",
    "requests>=2.32.4",
    "fastmcp (>=2.8.1,<3.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "D", "UP", "B", "A", "C4", "T20", "Q", "RUF"]
ignore = []

[tool.mypy]
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
warn_unreachable = true
error_summary = true

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true

[tool.poetry.group.dev.dependencies]
pytest = "8.3.5"
pytest-asyncio = "0.26.0"
mypy = "*"
black = "*"
ruff = "*"
pydocstyle = "*"
isort = "*"
pre-commit = "^4.2.0"
pytest-cov = "^6.1.1"
types-requests = "^2.32.4.20250611"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
